# armenian-goods

./: .gitignore  LICENSE  Makefile  compose.yaml
backend/: .env.example  Dockerfile  Dockerfile.dev  poetry.toml  pyproject.toml
backend/api/: urls.py
backend/api/v1/: urls.py
backend/api/v1/apps/common/: models.py
backend/api/v1/apps/shops/: admin.py  apps.py  interfaces.py  serializers.py  services.py  tasks.py  urls.py
backend/api/v1/apps/shops/apis/: example.py  rest.py
backend/api/v1/apps/shops/migrations/: 0001_initial.py
backend/api/v1/apps/shops/models/: __init__.py  example.py  shops.py
backend/config/: __init__.py  celery.py  urls.py
backend/config/settings/: base.py  local.py  prod.py
backend/tests/factories/: shop.py
backend/tests/models/: test_shop.py
